Fixed font size on smaller divces

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -55,12 +55,12 @@ a{
 h1{
     font-family: serif;
     color: var(--footer-clor);
-    font-size: 3rem;
+    font-size: calc(2rem + 1.5vw);
     margin-bottom: 20px;
 }
 
 h1 > div{
-    font-size: 2.5rem;
+    font-size: calc(1.5rem + 1.5vw);
 }
 
 h2{
